[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
[tool.poetry.dependencies]
beautifulsoup4 = "==4.8.2"
certifi = "==2019.11.28"
chardet = "==3.0.4"
click = "==7.0"
flask = "==1.1.1"
gunicorn = "==20.0.4"
idna = "==2.8"
itsdangerous = "==1.1.0"
jinja2 = "==2.10.3"
markupsafe = "==1.1.1"
python = "^3.7"
pytz = "==2019.3"
requests = "==2.22.0"
simplejson = "==3.17.0"
slacker = "==0.13.0"
soupsieve = "==1.9.5"
urllib3 = "==1.25.7"
werkzeug = "==0.16.0"
